--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/mon-ptit-matin.css') }}">
-        <link rel="stylesheet" href="{{ asset('assets/js/script.js') }}" defer>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,46 +47,46 @@
 
     <body>
     <header>
-  <nav class="navbar navbar-expand-md navbar-dark ">
-    <div class="container-fluid">
-      <a class="navbar-brand " href="{{ path('app_home') }}"><img src="{{asset('assets/img/logo.png')}}" alt="logo" id='logo'></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{path ('app_about_us')}}">A propos de nous |</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{path ('app_product')}}">Nos produits |</a>
-          </li>
-                    <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{path ('app_producter')}}">Nos partenaires</a>
-          </li>
-        </ul>
-        <div class="navbar-item-custom">
-        {% if app.user %}
-        <a href="{{path ('app_account')}}">Mon Compte <small></small></a>  |  <a href="{{path ('app_logout')}}">Déconnexion</a>
-        {% else %}
+      <nav class="navbar navbar-expand-md navbar-dark ">
+        <div class="container-fluid">
+          <a class="navbar-brand " href="{{ path('app_home') }}"><img src="{{asset('assets/img/logo.png')}}" alt="logo" id='logo'></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{{path ('app_about_us')}}">A propos de nous |</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{{path ('app_product')}}">Nos formules |</a>
+              </li>
+                        <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{{path ('app_producter')}}">Nos partenaires</a>
+              </li>
+            </ul>
+            <div class="navbar-item-custom">
+            {% if app.user %}
+            <a href="{{path ('app_account')}}">Mon Compte <small></small></a>  |  <a href="{{path ('app_logout')}}">Déconnexion</a>
+            {% else %}
 
-        <a href="{{path ('app_login')}}">Connexion</a>  |  <a href="{{path ('app_register')}}">Inscription</a>
-        {% endif %}
-        </div><span class="opacity-0">ese</span>
-        <a href="{{ path('app_cart') }}">
-          <div class="cart">
-          <img id='cart' src="{{asset('assets/img/cart.png')}}" alt="Mon panier" class="cart-icon">
-            <img  class='cadeau' id='cadeau3' src="{{asset('assets/img/cadeau1.png')}}" alt="cadeau">
-            <img  class='cadeau' id='cadeau1' src="{{asset('assets/img/cadeau3.png')}}" alt="cadeau">
-            {% set nbCart = app.session.get('nb-cart') %}
-          <div class="numbercart text-center opacity-1">{% if nbCart == null %} 0 {% else %}
-             {{ nbCart }}{% endif %}</div></div>
+            <a href="{{path ('app_login')}}">Connexion</a>  |  <a href="{{path ('app_register')}}">Inscription</a>
+            {% endif %}
+            </div><span class="opacity-0">ese</span>
+            <a href="{{ path('app_cart') }}">
+              <div class="cart">
+              <img id='cart' src="{{asset('assets/img/cart.png')}}" alt="Mon panier" class="cart-icon">
+                <img  class='cadeau' id='cadeau3' src="{{asset('assets/img/cadeau1.png')}}" alt="cadeau">
+                <img  class='cadeau' id='cadeau1' src="{{asset('assets/img/cadeau3.png')}}" alt="cadeau">
+                {% set nbCart = app.session.get('nb-cart') %}
+              <div class="numbercart text-center opacity-1">{% if nbCart == null %} 0 {% else %}
+                {{ nbCart }}{% endif %}</div></div>
 
-        </a><span class="opacity-0">ee</span>
-      </div>
-    </div>
-  </nav>
-</header>
+            </a><span class="opacity-0">ee</span>
+          </div>
+        </div>
+      </nav>
+    </header>
         {% block content %}{% endblock %}
     
     
@@ -119,7 +118,7 @@ function checkWindowHeight() {
                 // Sinon, il reste en position fixe
                 document.querySelector('.foot').style.position = 'inherit';
             }
-            console.log('test')
+
         }
 
         // Vérifie la hauteur de la fenêtre au chargement de la page
