--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -25,7 +25,7 @@ C'est dans cet espace que vous allez pouvoir gérer toutes vos informations pers
         </div></a>
     </div>
     <div class="col-md-4">
-    <a href=""><div class="account-item text-center">
+    <a href="{{ path('app_account_order')}} "><div class="account-item text-center">
     <img src="{{ asset('assets/img/commandee.png') }}"  alt="Mes commandes" height='32px'; width='32px'><br><br>
         Mes commandes<br>
     
