--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -62,7 +62,7 @@
         <b>Sous-Total :</b> {{ (total / 100) | number_format(2, ',', '.') }} €<br>
         <b>Livraison :</b> {{ ((delivery.price)/100) | number_format(2, ',', '.') }} €<br>
         <b>Total :</b> {{ ((total + delivery.price) / 100) | number_format(2, ',', '.') }} €<br>
-        <a href="" class="btn btn-success mt-3 text-center">Payer {{ ((total + delivery.price) / 100) | number_format(2, ',', '.') }} €</a>
+        <a href="{{ path('app_stripe_create_session', {reference: reference}) }}" class="btn btn-success mt-3 text-center">Payer {{ ((total + delivery.price) / 100) | number_format(2, ',', '.') }} €</a>
     </div>
 </div>
 </div>
