--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,6 +7,7 @@
 <center><h1 class="mt-5">Connexion</h1></center>
 <br>
 <div class="d-flex justify-content-center">
+<div class="login">
     <form method="post" class="col-md-3 border rounded p-3 bg-white">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -39,6 +40,7 @@
             <p class="text-center"><a href="{{ path('app_reset_password') }}">Mot de passe oublié </a> </p>
             <p class="text-center">Ou souhaitez-vous <a href="{{ path('app_register') }}">créer un compte</a> ?</p>
     </form>
+    </div>
 </div>
 
 {% endblock %}
