--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
         <a href="{{ path('app_product') }}" class="profiter">J'en profite</a>
     </div>
 
-    <div class="row mt-5 mb-5 text-center">
+    <div class="agriHome">><div class="row mt-5 mb-5 text-center">
         <div class="col">
             <img src="{{ asset('assets/img/agricultrice.png')}}" alt="Une agricultrice" class="agricultrice">
         </div>
@@ -17,13 +17,14 @@
 </p>
 
         </div>
-    </div>
+    </div></div>
 
 <div class="min">
     <h2>Minimun de commande 10 €</h2>
     </div>
     <br>
 
+    <div class="cityHome">
     <center><strong>Pour les particulers : Nous livrons dans l'agglométation de Saint-Omer et ses alentours</strong>
     <br>
    <li>Arques<li>Saint Omer <li>Blendecques <li>Longuenesse <li>Tilques <li>Wizernes <li>Esquerdes <li>Saint-Martin-au-Laërt <li>Hallines <li>Helfaut <li>Saint-Momelin
@@ -33,6 +34,8 @@
 <br>
    <p>Pour toute autre ville, n'hésitez pas à nous contacter au</p>
    <h3 class="numero">07 68 87 93 08</h3>
-   </center>
+   </center></div>
+
+
 
 {% endblock %}
