--- a/templates/producter/index.html.twig
+++ b/templates/producter/index.html.twig
@@ -17,7 +17,7 @@
             {% if compteur % 2 == 0 %}
 
             <div class="row featurette">
-                <div class="col-md-7 order-md-2 text-center d-flex align-items-center">
+                <div class="col-md-7 order-md-2 text-center d-flex align-items-center mb-3 mt-3">
                     <p>
                         {{ producter.description|raw }}
                     </p>
@@ -35,7 +35,7 @@
                 
                 
             <div class="row featurette">
-                <div class="col-md-7 text-center d-flex align-items-center">
+                <div class="col-md-7 text-center d-flex align-items-center mb-3 mt-3">
                     <p>
                         {{ producter.description|raw }}
                     </p>
