--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -8,7 +8,7 @@
 <br>
 
 <div class="formRegister d-flex justify-content-center mb-5">
-    <div class="col-md-6 border rounded-4 p-3 bg-white">
+    <div class="col-md-6 border rounded-4 registerB bg-white">
         {% if notification %}
             <div class="alert alert-info">
                 {{ notification }}
