--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -51,7 +51,7 @@ C'est dans cet espace que vous allez pouvoir gérer toutes vos informations pers
         </div></a>
     </div>
     <div class="col-md-4">
-    <a href=""><div class="account-item text-center">
+    <a href="{{ path('app_account_favorite') }}"><div class="account-item text-center">
     <img src="{{ asset('assets/img/etoile.png') }}" alt="Formule favorite" height='32px'; width='32px'><br><br>
         Formule favorite<br>
     
